feat: menambahkan repo, service, controller dan endpoint untuk session_records, juga menambahkan migrations untuk session_records
